[package]
name = "hakoniwa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rustc-hash = "1.1.0"
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"
