[package]
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
name = "hakoniwa"
version = "0.1.0"
edition = "2021"
description = "世界シミュレータ"
readme = "README.md"
repository = "https://github.com/puripuri2100/hakoniwa.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rustc-hash = "1.1.0"
